# tomd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  backend.py  dev.py  native.py  pyproject.toml  tomd-interview-guide.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
assets/: auto-run-disabled.mov  auto-run-multi-files.mov  auto-run-single-file.mov  make_icon.py
docs/: index.html
docs/specs/: tray-and-ui-enhancements-plan.md  tray-and-ui-enhancements.md
scripts/: build_macos.sh  build_windows.ps1
